--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <title>Portfolio Page for Mike Bechtel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Cormorant+SC|Sacramento" rel="stylesheet">
+
   </head>
   <body>
       <nav class="navbar navbar-default">
@@ -17,54 +19,59 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Connect</a></li>
           </ul>
         </div> <!-- container -->
       </nav> <!-- navbar navbar-default -->
 
-      <div class="container">
-        <div class="container">
-          <div class="heading">
-            <h1>Contact Me</h1>
-          </div>
-        </div> <!-- container for header-->
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <img src="assets/images/profilepic.jpg" alt="Profile pic" class="img-thumbnail center-block">
-          </div>
-          <div class="col-xs-12 col-md-8">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-                <br><br>
-                Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
-                <br><br>
-                Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Beer Me</h3>
-            </div>
-            <div class="panel-body">
-              Poured into a goblet, the beer offers some amazing head retention and rings of white lace sticking to the glass after each sip. Good clarity, with a dull golden color. The nose contains apricots and pear, faint ground white pepper, chalky yeast and an aroma of shortbread biscuits. It's very crisp and lively with a smooth back and moderate body. Spicy phenols wrap around its dry maltiness, which is similar to crusty bread, highlighted by some pithy notes of green banana. Spicy hops, with a flare from the alcohol, provide a nice bite along with a moderate grassy bitterness. Earthy on the palate with a flash of honey-like sweetness. Yeasty and fruity undertones layer middle to end. Finishes dry.
-            </div>
-          </div>
-          </div>
-        </div>
+    <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-6">
-          <img src="assets/images/portfolio.jpg" alt="Portfolio pic" class="img-thumbnail center-block">
-        </div>
-        <div class="col-xs-12 col-md-6">
-          <img src="assets/images/Contact.jpg" alt="Contact pic" class="img-thumbnail center-block">
-        </div>
-      </div>
+        <div class="col-xs-12 col-md-8">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <form>
+                <label for="inputFirstName">First Name</label>
+                <input type="firstName" class="form-control" id="inputFirstName" placeholder="John">
+                <div class="form-group">
+                  <label for="inputLastName">Last Name</label>
+                  <input type="lastName" class="form-control" id="inputLastName" placeholder="Smith">
+                </div>
+                <div class="form-group">
+                  <label for="inputEmail">Email Address</label>
+                  <input type="email" class="form-control" id="inputEmail" placeholder="example@gmail.com">
+                </div>
+                <textarea class="form-control" rows="10" placeholder="Enter message..."></textarea>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+            </div>
+          </div>
+
+
+
+        </div> <!-- parent column -->
+
+        <div class="col-xs-12 col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading">Connect With Me</div>
+
+            <div class="row">
+              <div class="panel-body">
+              <div class="col-xs-4 col-md-4">
+                <a target="_blank" href="https://github.com/dizdonut"><img src="assets/images/github.png" alt="GitHub" class="img-thumbnail"></a>
+              </div>
+              <div class="col-xs-4 col-md-4">
+                <a target="_blank" href="https://www.linkedin.com/in/michael-bechtel-57538920/"><img src="assets/images/linkedin.png" alt="LinkedIn" class="img-thumbnail"></a>
+              </div>
+              <div class="col-xs-4 col-md-4">
+                <a target="_blank" href="https://www.instagram.com/mikebec20/?hl=en"><img src="assets/images/Instagram.png" alt="Instagram" class="img-thumbnail"></a>
+              </div>
+             </div>
+             </div> <!-- sub row for sidebar -->
+           </div> <!-- end sidebar panel bar -->
+         </div> <!-- end sidebar column -->
+        </div> <!-- row for main section -->
     </div> <!-- container -->
+  </div> <!-- container -->
 
     <div id="footer">
       <div class="container">
